fixed broken white space and added footer

--- a/style.css
+++ b/style.css
@@ -1,7 +1,26 @@
+:root{
+    --background-bg-color: #fafbfd;
+    --footer-bg-color: #00356a;
+    --text-bg-color: #dce9ef;
+    --nav-color: #3286aa;
+    --container-bg-color: #91bbd1;
+}
+
+html{
+    height: 100%;
+}
+
 *{
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+}
+
+body{
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+    background-color: var(--background-bg-color);
 }
 
 nav{
@@ -10,17 +29,18 @@ nav{
     align-items: center;
     min-height: 8vh;
     font-family: "Poppins", sans-serif;
-    background-color: #3ad6f2;
+    background-color: var(--nav-color);
 }
 
 .logo{
     text-transform: uppercase;
     letter-spacing: 5px;
     font-size: 20px;
+    color: var(--text-bg-color);
 }
 
 .logo a{
-    color: rgb(226, 226, 226);
+    color: var(--text-bg-color);
     text-decoration: none;
 }
 
@@ -35,7 +55,7 @@ nav{
 }
 
 .nav-links a{
-    color: rgb(226, 226, 226);
+    color: var(--text-bg-color);
     text-decoration: none;
     letter-spacing: 3px;
     font-weight: bold;
@@ -49,7 +69,7 @@ nav{
 .burger div{
     width: 25px;
     height: 3px;
-    background-color: rgb(226, 226, 226);
+    background-color: var(--text-bg-color);
     margin: 5px;
     transition: all 0.3s ease;
 }
@@ -69,7 +89,7 @@ nav{
         right: 0px;
         height: 92vh;
         top: 8vh;
-        background-color: #3ad6f2;
+        background-color: var(--nav-color);
         display: none;
         flex-direction: column;
         align-items: center;
@@ -114,45 +134,36 @@ nav{
     transform: rotate(45deg) translate(-5px, -6px);
 }
 
-
-button{
-    text-decoration: none;
-    font-size: 15pt;
-    transition: all 0.3s;
-    text-align: center;
-    display: inline-block;
-    border: none;
-    border-radius: 4px;
-    padding: 5px;
-}
-
-button:hover{
-    -moz-box-shadow: inset 0 0 10px #000000;
-    -webkit-box-shadow: inset 0 0 10px #000000;
-    box-shadow: inset 0 0 10px #000000;
-}
-
 #home{
-text-align: center;
-background-color: #3ad6f2;
-font-family: "Montserrat", sans-serif;
-transition: background 1s;
-}
-
-#home:hover{
-background-color: #ff4c4c;
-}
-
-#cydiabutton{
-    cursor: pointer;
-    margin-bottom: 15px;
+    text-align: center;
+    background-color: var(--container-bg-color);
+    font-family: "Montserrat", sans-serif;
 }
 
 p{
-font-size: 25px;
-text-align: center;
+    font-size: 25px;
+    text-align: center;
 }
 
 #date{
-font-size: 20px;
+    font-size: 20px;
+}
+
+#footer{
+    background-color: var(--footer-bg-color);
+    margin-top: auto;
+}
+
+#footer p{
+    text-align: center;
+    color: var(--text-bg-color);
+    font-size: 14px;
+    font-family: "Montserrat", sans-serif;
+    padding: 5px;
+}
+
+#social-list a{
+    display: flex;
+    justify-content: space-around;
+    margin: 20px;
 }
